SAK-16991
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/SAK-16987@66664 66ffb92e-73f9-0310-93c1-f5514f145a0a